--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://7fa5b2fe-9be9-4968-811a-14ca1d848253.preview.emergentagent.com
 WDS_SOCKET_PORT=443
